--- a/_data/orgs.yml
+++ b/_data/orgs.yml
@@ -1,8 +1,16 @@
 # Partner institutions for homepage display
 partners:
-  - name: worldbank
-    logo: /assets/img/partners/worldbank.png
-    display_name: World Bank Group
-    url: https://www.worldbank.org/
-    
+  - name: oxford
+    logo: /assets/img/partners/Oxford.png
+    display_name: University of Oxford
+    url: https://www.ox.ac.uk/
 
+  - name: itrc
+    logo: /assets/img/partners/ITRC.svg
+    display_name: Infrastructure Transitions Research Consortium (ITRC)
+    url: https://www.itrc.org.uk/
+
+  - name: opsis
+    logo: /assets/img/partners/OPSIS.png
+    display_name: Oxford Programme for Sustainable Infrastructure Systems (OPSIS)
+    url: https://opsis.eci.ox.ac.uk/
