--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,6 +1,13 @@
-- abstract: "Retiring coal plants as part of a decarbonization strategy has started to become a reality in the last five years and is reflected in the least-cost plans of many countries. However, major issues go beyond the scope of such planning, including commercial contracts, markets and asset stranding. This paper proposes a new model formulation that endogenously calculates stranded assets taking into consideration commercial and market issues. It can be used to develop insights into economic and financial issues surrounding stranded costs of coal retirement. An illustrative example around the existing 209 GW coal fleet, including an aging part of the coal fleet of 100 GW, in India is used to show how the model can be implemented with relative ease. A second case study is constructed for the Philippines, which has a much younger and uniform coal fleet. Comparing and contrasting the two case studies is valuable for understanding the critical drivers of stranded costs."
-  authors: 'Suski A., Hong L.,Chattopaghyay D.'
-  journal: Energy for Sustainable Development
-  title: "Modeling coal plant stranded costs for decarbonization pathway analyses"
-  url: https://www.sciencedirect.com/science/article/abs/pii/S0973082622002022
-  year: "2022"
+ - title: "Hall, J. W. et al. (2016) ‘National infrastructure assessment: A system-of-systems approach’, Proceedings of the Institution of Civil Engineers – Civil Engineering."
+    link: "https://doi.org/10.1680/jcien.16.00018"
+    abstract: "Introduces the NISMOD framework for national infrastructure assessment and the integrated modelling of UK infrastructure systems."
+
+  - title: "Thacker, S. et al. (2017) ‘Infrastructure interdependencies and climate risk’, Nature Climate Change."
+    link: "https://doi.org/10.1038/nclimate3273"
+    abstract: "Explores how NISMOD supports understanding of climate-related risks across interconnected infrastructure systems."
+
+  - title: "Pant, R. et al. (2020) ‘A framework for national infrastructure risk assessment’, Risk Analysis."
+    link: "https://doi.org/10.1111/risa.13585"
+    abstract: "Presents a national-scale methodology for assessing risks to infrastructure systems, using the NISMOD model suite."
+
+google_scholar: "https://scholar.google.com/citations?user=NISMOD"
