--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ description: "GitHub helps government build software better, together"
 baseurl: "/nismod"
 permalink: "/stories/:title"
 relative_permalinks: false
+forum_slug: "nismod"
 
 # Remote Theme Configuration
 remote_theme: energy-modeling-tools/page-template@main
